   be in Typus until "Chosen" supports remote data calls.

 * [NEW] This is not really new ... I've taken back the autocomplete
   feature which will be used eventually by "Chosen" once they support
   remote calls.

 * [CHANGED] Typus::Resources.minute_step is now nil by default.

 * [CHANGED] Date and DateTime selectors should not set current date by default.

= 3.1.2

 * [CHANGED] Images, links and belongs_to associations do not have links
   when popup mode. This will avoid an "Inception" problem.

 * [FIXED] Problems on HABTM associations when generating association names.

= 3.1.1

 * [CHANGED] Removed user guide. Docs can now be found at http://docs.typuscmf.com/

 * [NEW] New configuration setting which allows serving Typus from a subdomain. (42b5d8ae)

 * [FIXED] HABTM associations were not working as expected when using namespaced
   models.

 * [CHANGED] Configuration can be read from subfolders so you can organize better
   your models. I'm starting to use a file per model and I'd recommend you start
   using it ... (8a3fc09f)

 * [FIXED] Helper Method `display_virtual` was not defined. (2b7e1948)

 * [FIXED] Do not show Trash link when user can't edit items.

 * [CHANGED] Updated Rubies list for Travis-CI.

 * [CHANGED] Default development/test database is now **Postgresql**.

= 3.1.0

 * [NEW] Filter with scopes.

 * [NEW] Three different actions to save a record.

 * [CHANGED] Now we have a dashboard for every installed application.

 * [CHANGED] Associations are now cleaner. No more "relate" and "unrelate".

 * [NEW] 960.gs (http://960.gs/)

 * [NEW] Formalize (http://formalize.me/)

 * [NEW] Chosen (http://harvesthq.github.com/chosen/)

 * [CHANGED] We now support data types, which is basically a cleaner way to
   add support to future data models. (Eg. CarrierWave)

 * [CHANGED] Dragonfly attachments now also show details. (Size, date ...)

 * [CHANGED] Improved usability by using Fancybox to add new related records.

 * [NEW] Bulk actions.
