@@ -13,6 +13,9 @@
 
  * [CHANGED] Date and DateTime selectors should not set current date by default.
 
+ * [CHANGED] Generator now stores model configuration in a file with the
+   name of the model, not the plural.
+
 = 3.1.2
 
  * [CHANGED] Images, links and belongs_to associations do not have links
